# University

./: CMakeLists.txt  int.c  int.h  launch.sh  main.c  matrix.h  real.c  real.h  ring_info.c  ring_info.h
lab1/: CMakeLists.txt  int.c  int.h  int_time.txt  launch.sh  main.c  matrix.c  matrix.h  new_int_time.txt  new_main.c  new_matrix.c  new_matrix.h  new_real_time.txt  real.c  real.h  ring_info.c  ring_info.h  test.c  test.cpp  time_test.cpp
lab1/lab1/: matrix.c
sem2_lab2/: CMakeLists.txt  array.h  array_sequence.h  launch.sh  list.h  list_sequence.h  main.cpp  main_queue.cpp  pair.h  queue.h  queue_tests  queue_tests.cpp  queue_tests.sh  queue_with_priority.h  seq_test.cpp  sequence.h  structures.h
